# remembry-app

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  developer-id.p12  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
docs/: PITCH_BRIEF.md  PRESENTATION_SCRIPT.md  PROPOSAL.md  PROPOSAL_VISUAL.html
scripts/: guide-screenshots.ts  take-screenshots.ts  test-tauri-security.js
src/: types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ask.rs  events.rs  gemini_key.rs  meetings.rs  mod.rs  notes.rs  projects.rs  tests.rs  uploads.rs
src-tauri/src/db/: documents.rs  events.rs  gemini_key_metadata.rs  meetings.rs  mod.rs  projects.rs  upload_jobs.rs
src-tauri/src/gemini/: files.rs  generate.rs  mod.rs  validation.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/uploads/: mod.rs  session.rs
src/app/: globals.css  layout.tsx
src/app/ask/: page.tsx
src/app/dashboard/: page.tsx
src/app/download/: page.tsx
src/app/events/: page.tsx
src/hooks/: useAudioRecorder.ts  useTauriAudio.ts  useUploadJobs.ts
src/lib/: apiFetch.ts  appUpdater.ts  clientUser.ts  eventKnowledge.ts  meetingViews.ts  navigation.ts  tauriApi.ts
src/test/: apiFetch.test.ts  eventKnowledge.test.ts  meetingViews.test.ts  navigation.test.ts
(+23 files in other folders)
