[package]
name = "remembry"
version = "0.1.0"
description = "AI-powered meeting notes desktop app"
authors = ["Remembry Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "remembry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
anyhow = "1"
regex = "1"

# OS credential store
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[dev-dependencies]
tempfile = "3"
